2008-02-15  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.0.txt: Describe in the Release Notes the
	upgrade instructions (EJAB-522)

2008-02-15  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_sm.erl: Retreive connection type in
    sm_register_connection_hook
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_auth_anonymous.erl: Likewise

2008-02-14  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Allow unmoderated rooms (EJAB-437)
	* src/msgs/*: Recover old translations to several languages from
	ejabberd 1.1.4

2008-02-14  Alexey Shchepin  <alexey@process-one.net>

	* src/cyrsasl_digest.erl: Unquote backslash in DIGEST-MD5 quoted
	strings (EJAB-304)

	* src/mod_roster.erl: Removed the ancient Psi roster workaround
	* src/mod_roster_odbc.erl: Likewise

2008-02-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl: Fixed native support for all the
	ACL types (EJAB-253)

	* src/acl.erl: Normalize ACL before adding to the configuration
	tables (EJAB-521)

2008-02-11  Mickael Remond <mremond@process-one.net>

	* src/ejabberd_auth.erl: Do not allow empty password at
	creation. On authent, check in all cases that password is not
	empty.
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise

	* src/ejabberd_receiver.erl: Avoid crash to appear in log, when
	trying to close a stream with an undefined state.

2008-02-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix: event used in place of x when
	xmlns is pubsub#event (EJAB-518)

2008-02-11  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Bugfix: local message stanza may
	not have an attribute From (EJAB-515)

2008-02-08  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Include the error condition in the
	presence status when kicking a participant due to an error
	stanza (EJAB-496)
