@@ -1,3 +1,8 @@
+2008-02-18  Christophe Romain <christophe.romain@process-one.net>
+
+	* src/ejabberd_c2s.erl: Bug in get_conn_type since SVN r1194 crashes
+	http-bind and http-poll (thanks to Brian Cully) (EJAB-526)
+
 2008-02-15  Badlop  <badlop@process-one.net>
 
 	* doc/release_notes_2.0.0.txt: Describe in the Release Notes the
@@ -6,7 +11,7 @@
 2008-02-15  Christophe Romain <christophe.romain@process-one.net>
 
 	* src/ejabberd_sm.erl: Retreive connection type in
-    sm_register_connection_hook
+	sm_register_connection_hook
 	* src/ejabberd_c2s.erl: Likewise
 	* src/ejabberd_auth_anonymous.erl: Likewise
 
